Color fix - print option was not working

--- a/SolarCV.tex
+++ b/SolarCV.tex
@@ -1,5 +1,6 @@
 %!TEX TS-program = xelatex
-\documentclass[a4paper]{solarcv}
+%\documentclass[a4paper]{solarcv}
+\documentclass[print,a4paper]{solarcv}
 \begin{document}
 %%%%%%%%%%
 % CONFIG %
