--- a/tex/scvabout.tex
+++ b/tex/scvabout.tex
@@ -11,8 +11,8 @@
     Language2 ILR Lv 4
     Martian Native
     \section{skills}
-    {\color{solarized-red}$\varheartsuit$} Hearth Skill
-    {\color{solarized-blue}$\vardiamondsuit$} Diamond Skill
+    {\color{red}$\varheartsuit$} Hearth Skill
+    {\color{blue}$\vardiamondsuit$} Diamond Skill
     Normal Skill
     Normal Skill
     Normal Skill
